--- a/Beginning-Android-Programming-with-AndroidStudio-4th/UsingIntent/app/src/main/res/layout/activity_second.xml
+++ b/Beginning-Android-Programming-with-AndroidStudio-4th/UsingIntent/app/src/main/res/layout/activity_second.xml
@@ -7,7 +7,23 @@
     tools:context=".SecondActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="This is the Second Activity"/>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="please enter your name"/>
+    <EditText
+        android:id="@+id/txtUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/button2"
+        android:text="OK"
+        android:onClick="onClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
