--- a/Android-Cookbook/HelloWorld/app/src/main/res/layout/activity_main.xml
+++ b/Android-Cookbook/HelloWorld/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,32 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textview"/>
+    <Button
+        android:id="@+id/sendMail"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="SendMail"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnAlert"/>
+    <Button
+        android:id="@+id/btnSub"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="Call SubActivity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/sendMail"/>
+    <Button
+        android:id="@+id/btnGotoBackgroupServiceActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="GotoBackgroupServiceActivity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnSub"/>
 
 </android.support.constraint.ConstraintLayout>
